[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["KIrie-0217 <kook.cuckoo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
numba = "^0.55.2"
online-judge-tools = "^11.5.1"
ipykernel = "^6.15.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
